// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unified-latex-util-argspec > parses xparse argument specification string "!o r() m" 1`] = `
[
  {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": ")",
    "openBrace": "(",
    "type": "mandatory",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "" 1`] = `[]`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "D(ab" 1`] = `
[
  {
    "closeBrace": "a",
    "defaultArg": "b",
    "openBrace": "(",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "E{\\token ^}{{D1}2}" 1`] = `
[
  {
    "embellishmentDefaultArg": [
      "D1",
      "2",
    ],
    "embellishmentTokens": [
      "\\\\token",
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "O{nested{defaults}}" 1`] = `
[
  {
    "closeBrace": "]",
    "defaultArg": "nested{defaults}",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "O{somedefault} m o" 1`] = `
[
  {
    "closeBrace": "]",
    "defaultArg": "somedefault",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "Ox" 1`] = `
[
  {
    "closeBrace": "]",
    "defaultArg": "x",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "R\\a1{default}" 1`] = `
[
  {
    "closeBrace": "1",
    "defaultArg": "default",
    "openBrace": "\\\\a",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "d++ D--{def}" 1`] = `
[
  {
    "closeBrace": "+",
    "openBrace": "+",
    "type": "optional",
  },
  {
    "closeBrace": "-",
    "defaultArg": "def",
    "openBrace": "-",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m e^" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "embellishmentTokens": [
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m e{_^}" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "embellishmentTokens": [
      "_",
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m ta o o" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "token": "a",
    "type": "optionalToken",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "o m o !o m" 1`] = `
[
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "o m" 1`] = `
[
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "r\\abc\\d" 1`] = `
[
  {
    "closeBrace": "\\\\d",
    "openBrace": "\\\\abc",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "s m" 1`] = `
[
  {
    "type": "optionalStar",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u;" 1`] = `
[
  {
    "stopTokens": [
      ";",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u{ }" 1`] = `
[
  {
    "stopTokens": [
      " ",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u{xx;}" 1`] = `
[
  {
    "stopTokens": [
      "x",
      "x",
      ";",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "v!" 1`] = `
[
  {
    "closeBrace": "!",
    "openBrace": "!",
    "type": "verbatim",
  },
]
`;
